@@ -55,13 +55,13 @@ QString QGpgME::ImportJob::importFilter() const
     return d->m_importFilter;
 }
 
-void QGpgME::ImportJob::setImportOptions(const QString &options)
+void QGpgME::ImportJob::setImportOptions(const QStringList &options)
 {
     const auto d = jobPrivate<ImportJobPrivate>(this);
     d->m_importOptions = options;
 }
 
-QString QGpgME::ImportJob::importOptions() const
+QStringList QGpgME::ImportJob::importOptions() const
 {
     const auto d = jobPrivate<ImportJobPrivate>(this);
     return d->m_importOptions;
